# go-fontcatalog

./: .gitignore  CMakeLists.txt  DefaultFonts.json  README.md  bitmap.go  bitmap_font.go  bitmap_font_test.go  bm_font.go  bm_font_test.go  charset.go  font_geometry.go  font_holder.go  fontcatalog.go  fontcatalog_generater.go  fontcatalog_test.go  generate_image.go  generate_image_test.go  generater.go  generator.go  glyph.go  glyph_generater.go  glyph_generator.go  glyph_geometry.go  glyph_test.go  go.mod  go.sum  growing_packer.go  harp-fontcatalog-generator.ts  imath.go  link.go  max_rects_bin.go  msdf..go  msdf.c  msdf.go  msdf.h  msdf_test.go  options.go  point.go  rect.go  rect_pack.go  (+5 more)
fonts/: NotoSansMyanmar.LICENSE
lib/: fontcatalog_lib.h  msdfgen_lib.h
src/: CMakeLists.txt  bitmap_blit.cc  bitmap_blit.hh  charset.cc  charset.hh  font_geometry.cc  font_geometry.hh  font_holder.cc  font_holder.hh  fontcatalog_lib.cc  fontcatalog_lib.h  fontcatalog_test.cc  generator_attributes.hh  glyph_box.hh  glyph_generators.cc  glyph_generators.hh  glyph_geometry.cc  glyph_geometry.hh  msdfgen_lib.cc  msdfgen_lib.h  msdfgen_test.cc  types.hh
