
include_directories(${FLYWAVE_INCLUDE_DIRS})

FILE( GLOB msdf_SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.cc )
FILE( GLOB msdf_HEADER_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*.hh ${CMAKE_CURRENT_SOURCE_DIR}/*.h )

ADD_LIBRARY(msdf STATIC
            ${msdf_HEADER_FILES}
            ${msdf_SOURCE_FILES}
          )

TARGET_INCLUDE_DIRECTORIES(msdf PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/..>)

SOURCE_GROUP("src" FILES ${msdf_SOURCE_FILES})
SOURCE_GROUP("include" FILES ${msdf_HEADER_FILES})

SET_TARGET_PROPERTIES(msdf
                    PROPERTIES PUBLIC_HEADER "${headers}")

add_executable(tests msdfgen_test.cc)

IF(UNIX AND NOT APPLE)
TARGET_LINK_LIBRARIES(tests -Wl,--start-group msdf ${FLYWAVE_LIBRARY_DEPES} -Wl,--end-group)
ELSE()
TARGET_LINK_LIBRARIES(tests msdf ${FLYWAVE_LIBRARY_DEPES})
ENDIF()
